[package]
name = "apple"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
audioadapter-buffers = "2.0.0"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "avif",
] }
indicatif = { version = "0.18.4", features = ["rayon"] }
ncmdump = "0.8.0"
ogg = "0.9.2"
opus2 = { version = "0.3.3", features = ["bundled"] }
rayon = "1.11.0"
regex = "1.12.3"
ringbuf = "0.4.8"
rubato = "1.0.1"
symphonia = { version = "0.5.5", default-features = false, features = [
    "flac",
    "mp3",
    "wav",
] }
walkdir = "2.5.0"
webp = "0.3.1"
